@@ -7,27 +7,25 @@ package org.geoserver.wms.featureinfo;
 
 import static org.junit.Assert.*;
 
+import freemarker.template.Configuration;
+import freemarker.template.Template;
 import java.io.ByteArrayOutputStream;
 import java.io.OutputStreamWriter;
-
 import org.geoserver.template.FeatureWrapper;
+import org.geoserver.template.TemplateUtils;
 import org.geotools.data.DataUtilities;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.junit.Test;
+import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.GeometryFactory;
 import org.opengis.feature.simple.SimpleFeature;
 import org.opengis.feature.simple.SimpleFeatureType;
-
-import com.vividsolutions.jts.geom.Coordinate;
-import com.vividsolutions.jts.geom.GeometryFactory;
-
-import freemarker.template.Configuration;
-import freemarker.template.Template;
 
 public class FeatureDescriptionTemplateTest {
 
     @Test
     public void testTemplate() throws Exception {
-        Configuration cfg = new Configuration();
+        Configuration cfg = TemplateUtils.getSafeConfiguration();
         cfg.setObjectWrapper(new FeatureWrapper());
         cfg.setClassForTemplateLoading(FeatureTemplate.class, "");
 
@@ -36,11 +34,20 @@ public class FeatureDescriptionTemplateTest {
 
         // create some data
         GeometryFactory gf = new GeometryFactory();
-        SimpleFeatureType featureType = DataUtilities.createType("testType",
-                "string:String,int:Integer,double:Double,geom:Point");
+        SimpleFeatureType featureType =
+                DataUtilities.createType(
+                        "testType", "string:String,int:Integer,double:Double,geom:Point");
 
-        SimpleFeature f = SimpleFeatureBuilder.build(featureType, new Object[] { "three",
-                new Integer(3), new Double(3.3), gf.createPoint(new Coordinate(3, 3)) }, "fid.3");
+        SimpleFeature f =
+                SimpleFeatureBuilder.build(
+                        featureType,
+                        new Object[] {
+                            "three",
+                            Integer.valueOf(3),
+                            new Double(3.3),
+                            gf.createPoint(new Coordinate(3, 3))
+                        },
+                        "fid.3");
 
         ByteArrayOutputStream output = new ByteArrayOutputStream();
         template.process(f, new OutputStreamWriter(output));
@@ -71,7 +78,7 @@ public class FeatureDescriptionTemplateTest {
     }
 
     // public void testFeatureCollection() throws Exception {
-    // Configuration cfg = new Configuration();
+    // Configuration cfg = TemplateUtils.getSafeConfiguration();
     // cfg.setObjectWrapper(new FeatureWrapper());
     // cfg.setClassForTemplateLoading(FeatureDescriptionTemplate.class, "");
     //
@@ -85,12 +92,12 @@ public class FeatureDescriptionTemplateTest {
     //
     // DefaultFeature f = new DefaultFeature((DefaultFeatureType) featureType,
     // new Object[] {
-    // "three", new Integer(3), new Double(3.3), gf.createPoint(new Coordinate(3, 3))
+    // "three", Integer.valueOf(3), new Double(3.3), gf.createPoint(new Coordinate(3, 3))
     // }, "fid.3") {
     // };
     // DefaultFeature f4 = new DefaultFeature((DefaultFeatureType) featureType,
     // new Object[] {
-    // "four", new Integer(4), new Double(4.4), gf.createPoint(new Coordinate(4, 4))
+    // "four", Integer.valueOf(4), new Double(4.4), gf.createPoint(new Coordinate(4, 4))
     // }, "fid.4") {
     // };
     // SimpleFeatureCollection features = new DefaultFeatureCollection(null,null) {};
